# CAMClaw

./: .env.example  .gitignore  AGENTS.md  CAM_Agent_Architecture_Review.md  CMakeLists.txt  CONTEXT.md  README.md  camclaw_agent_architecture.html  draft.md  test.docx
docs/: agent-demo-to-production.md  agent-tool-schema-architecture.html  current-code-architecture.html  manual-test-agent-review.md  qt-current-architecture.html  semantic-intent-refactor-uml.html
docs/adr/: 0001-semantic-intent-agent-architecture.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/issues/: 001-create-operation-and-generate-toolpath-loop.md  002-review-and-edit-roughing-plan-draft.md  003-reject-draft-with-reason-and-replan.md  004-handle-target-and-missing-information.md  005-run-multistep-skill-with-failure-feedback.md  006-reuse-controlled-capabilities-from-scripts.md  007-verify-global-object-id-and-repository-authority.md  008-reserve-template-and-rag-extension-interface.md  README.md
docs/prd/: agent-console-skill-workflow.md
include/camclaw/: AgentPlanDraft.h  AgentPlanDraftJsonCodec.h  AgentPlanExecutionResult.h  AgentPlanExecutionResultJsonCodec.h  AgentPlanExecutor.h  AgentPlanner.h  AgentWorkflowService.h  BrowserConsole.h  HumanInLoopService.h  OpenAiCompatibleLlmClient.h  PlanDraftFactory.h  SemanticIntentPlan.h  SkillRuntime.h  TargetResolver.h  TraceService.h
python_backend/: README.md
python_backend/camclaw_agent_backend/: __init__.py  contracts.py  feature_recognition.py  llm_client.py  planner.py  semantic_schemas.py  server.py  tool_library.py
python_backend/config/: agent_backend.json  tool_library.json
python_backend/tests/: test_llm_client.py  test_planner.py  test_server.py  test_tool_library.py
qt/include/camclaw/qt/: AgentDraftService.h  AgentReviewDialog.h  BrowserTree.h  CamMainWindow.h  CamViewport.h  OperationEditDialog.h
qt/src/: AgentDraftService.cpp  AgentReviewDialog.cpp  BrowserTree.cpp  CamMainWindow.cpp  CamViewport.cpp  OperationEditDialog.cpp  main.cpp
qt/tests/: test_cam_main_window.cpp
scripts/: run_agent_review_backend.ps1  run_qt_cam.bat  run_qt_cam.ps1
src/: AgentPlanDraft.cpp  AgentPlanDraftJsonCodec.cpp  AgentPlanExecutionResultJsonCodec.cpp  AgentPlanExecutor.cpp  AgentPlanner.cpp  AgentWorkflowService.cpp  BrowserConsole.cpp  HumanInLoopService.cpp  OpenAiCompatibleLlmClient.cpp  PlanDraftFactory.cpp  SemanticIntentPlan.cpp  SkillRuntime.cpp  TargetResolver.cpp  TraceService.cpp
tests/: test_action_gateway.cpp  test_agent_end_to_end.cpp  test_agent_plan_draft.cpp  test_agent_plan_draft_json_codec.cpp  test_agent_plan_execution_result_json_codec.cpp  test_agent_plan_executor.cpp  test_agent_planner.cpp  test_agent_workflow.cpp  test_browser_console.cpp  test_human_in_loop.cpp  test_openai_compatible_llm_client.cpp  test_plan_draft_factory.cpp  test_python_backend_draft_to_cpp_execution.cpp  test_repository.cpp  test_semantic_intent.cpp  test_skill_runtime.cpp  test_trace_service.cpp
ui_prototype/agent_review/: README.md  index.html  review.js  review.test.js  styles.css
